# AIKW

./: .gitignore  CMakeLists.txt  Configuration.qml  Generation.qml  Input.qml  Main.qml  README.md  Title.qml  TitleBar.qml  db.sqlite  description.cpp  description.h  generation.cpp  generation.h  main.cpp
components/: CMakeLists.txt  Input.qml  ParamSelect.qml  Select.qml  parameter.cpp  parameter.h  record.cpp  record.h
qml/: ALabel.qml  Description.qml  Generation.qml  InputArea.qml  Main.qml  Title.qml  TitleBar.qml
